--- a/login.html
+++ b/login.html
@@ -5,21 +5,29 @@
 	<meta name="robots" content="noindex, nofollow">
 	<!-- Include CSS File Here -->
 	<link rel="stylesheet" href="assets/css/login.css"/>
+	<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 	<!-- Include CSS File Here -->
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script type="text/javascript" src="assets/js/login.js"></script>
 </head>
 <body>
 	<div class="container">
-		<div class="main">
-			<form class="form" method="post" action="#">
-				<h2>Login Form</h2>
-				<label>User name :</label>
-				<input type="text" name="username" id="username">
-				<label>Password :</label>
-				<input type="password" name="password" id="password">
-				<input type="button" name="login" id="login" value="Login">
-			</form>
+		<div class="row justify-content-md-center">
+			<div id="login-container" class="col-8">
+				<form class="form" method="post" action="#">
+					<h2>Login Form</h2>
+					<div class="form-group">
+						<label>User name :</label>
+						<input type="text" name="username" id="username" class="form-control">
+					</div>
+					<div class="form-group">
+						<label>Password :</label>
+						<input type="password" name="password" id="password" class="form-control">
+					</div>
+					<input type="button" name="login" id="login" value="Login" class="form-control btn btn-primary">
+				</form>
+			</div>
 		</div>
 	</div>
 </body>
