--- a/login.html
+++ b/login.html
@@ -25,7 +25,8 @@
 						<label>Password :</label>
 						<input type="password" name="password" id="password" class="form-control">
 					</div>
-					<input type="button" name="login" id="login" value="Login" class="form-control btn btn-primary">
+					<a href="register.html" class="link">Register Now!</a>
+					<input type="button" name="login" id="login" value="Login" class="form-control btn btn-primary col-2">
 				</form>
 			</div>
 		</div>
