Add picture & title on Login Form

--- a/login.html
+++ b/login.html
@@ -13,6 +13,10 @@
 </head>
 <body>
 	<div class="container">
+		<div class="row justify-content-md-center div-title">
+			<img src="assets/img/poly-aubergine.jpg" class="rounded float-left aubergine-img" alt="Aubergine">
+			<h1 class="title">Aubergine</h1>
+		</div>
 		<div class="row justify-content-md-center">
 			<div id="login-container" class="col-8">
 				<form class="form" method="post" action="#">
