--- a/register.html
+++ b/register.html
@@ -41,7 +41,7 @@
             <div class="control-group">
                 <div class="controls">
                     <button class="btn btn-success" id="register_btn">Register</button>
-					<a href="login.html" class="link login-link">Already have an account ? Login !</a>
+					<a href="login.php" class="link login-link">Already have an account ? Login !</a>
                 </div>
             </div>
         </fieldset>
